--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="botoes-carrossel">
-                <button class="botao selecionado"></button>
+                <button class="botao selecionado" id="botao1"></button>
                 <button class="botao"></button>
                 <button class="botao"></button>
                 <button class="botao"></button>
@@ -55,5 +55,6 @@
             </ul>
         </aside>
     </main>
+    <script src="js/index.js"></script>
 </body>
 </html> 
